force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Indicates what this sales items is about</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>