force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Special (S)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>