force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the price of this item</description>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>