force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>