force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>indicated the quantity that was shipped</description>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>