force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <defaultValue>10.0</defaultValue>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>