force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <formula>IF(ISBLANK(Work_Order_Line_Item__c), &#39;&#39;, Work_Order_Line_Item__r.Resource_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows related Work Order Line Item Resource field for labour line</inlineHelpText>
    <label>Technician</label>
    <type>Text</type>
</CustomField>