force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Unit_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Formula__c</fullName>
    <description>This field is used to update WOLI details from SOLI</description>
    <formula>Item_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>