force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Update_Count__c.field-meta.xml
<CustomField>
    <fullName>Update_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is populated when the SOLI is updated from the WOLI.
It also filters when to update the WOLI from the SOLI on the process builder</description>
    <label>Update Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>