force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Sales Order Line Items</relationshipLabel>
    <relationshipName>Sales_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>